--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head><title>TypeScript Greeter</title></head>
+    <head>
+        <meta charset="UTF-8"/>
+        <title>TypeScript Greeter</title>
+    </head>
     <body>
-        <script src="index.js"></script>
+        <p>这是一个段落 。</p>
+        <button>切换段落的上滑与下滑。</button>
+        <script src="app.js"></script>
     </body>
 </html>
